Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ body::before {
 
 <script>
 const channelsData = [
-  // القنوات الأصلية
+  // القنوات الأصلية - beIN SPORTS
   {
     name: "بين سبورت 1",
     logo: "https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Bein_Sports_logo.svg/1200px-Bein_Sports_logo.svg.png",
@@ -491,270 +491,6 @@ const channelsData = [
     category: "رياضي",
     url: "http://stream.mytvplus.net:7006/sport/ch5/ch5_1080.m3u8",
     quality: "1080p",
-    status: "مباشر",
-    bitrate: "عالية"
-  },
-  
-  // قسم قنوات نوفا أفلام
-  {
-    name: "نوفا ابطال خارقين",
-    logo: "https://via.placeholder.com/150/FF6B6B/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/995.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا اكس مان",
-    logo: "https://via.placeholder.com/150/4ECDC4/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/994.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا زومبي",
-    logo: "https://via.placeholder.com/150/45B7D1/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/993.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا زارور",
-    logo: "https://via.placeholder.com/150/96CEB4/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/992.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا باتمان",
-    logo: "https://via.placeholder.com/150/FECA57/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/991.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا سوبرمان",
-    logo: "https://via.placeholder.com/150/FF9FF3/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/990.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا ايرون مان",
-    logo: "https://via.placeholder.com/150/54A0FF/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/988.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا هالك",
-    logo: "https://via.placeholder.com/150/5F27CD/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/987.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا فانتاستك",
-    logo: "https://via.placeholder.com/150/00D2D3/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/986.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا دراكولا",
-    logo: "https://via.placeholder.com/150/FF9F43/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/985.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا بريداتور",
-    logo: "https://via.placeholder.com/150/10AC84/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/984.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا خيال علمي",
-    logo: "https://via.placeholder.com/150/FF6B6B/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/983.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا سينما",
-    logo: "https://via.placeholder.com/150/48DBFB/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/980.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا كروب",
-    logo: "https://via.placeholder.com/150/1DD1A1/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/979.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا كلاسك",
-    logo: "https://via.placeholder.com/150/F368E0/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/978.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا كوميدي",
-    logo: "https://via.placeholder.com/150/FF9F43/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/977.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا تاريخي",
-    logo: "https://via.placeholder.com/150/54A0FF/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/976.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا رعب",
-    logo: "https://via.placeholder.com/150/5F27CD/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/975.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا ميكس",
-    logo: "https://via.placeholder.com/150/00D2D3/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/974.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  {
-    name: "نوفا موفيز",
-    logo: "https://via.placeholder.com/150/FF6B6B/FFFFFF?text=NOVA",
-    group: "قنوات نوفا أفلام",
-    category: "أفلام",
-    url: "https://sa.savpn.xyz/live/SD14/AQE22/973.m3u8",
-    quality: "HD",
-    status: "مباشر",
-    bitrate: "متوسطة"
-  },
-  
-  // قسم الوان الرياضية بدقة 4K
-  {
-    name: "الوان 1",
-    logo: "https://via.placeholder.com/150/FF6B6B/FFFFFF?text=الوان",
-    group: "الوان الرياضية بدقة 4K",
-    category: "رياضي",
-    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409794.m3u8",
-    quality: "4K",
-    status: "مباشر",
-    bitrate: "عالية"
-  },
-  {
-    name: "الوان 2",
-    logo: "https://via.placeholder.com/150/4ECDC4/FFFFFF?text=الوان",
-    group: "الوان الرياضية بدقة 4K",
-    category: "رياضي",
-    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409797.m3u8",
-    quality: "4K",
-    status: "مباشر",
-    bitrate: "عالية"
-  },
-  {
-    name: "الوان 3",
-    logo: "https://via.placeholder.com/150/45B7D1/FFFFFF?text=الوان",
-    group: "الوان الرياضية بدقة 4K",
-    category: "رياضي",
-    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409800.m3u8",
-    quality: "4K",
-    status: "مباشر",
-    bitrate: "عالية"
-  },
-  {
-    name: "الوان 4",
-    logo: "https://via.placeholder.com/150/96CEB4/FFFFFF?text=الوان",
-    group: "الوان الرياضية بدقة 4K",
-    category: "رياضي",
-    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409803.m3u8",
-    quality: "4K",
-    status: "مباشر",
-    bitrate: "عالية"
-  },
-  {
-    name: "الوان 5",
-    logo: "https://via.placeholder.com/150/FECA57/FFFFFF?text=الوان",
-    group: "الوان الرياضية بدقة 4K",
-    category: "رياضي",
-    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409806.m3u8",
-    quality: "4K",
-    status: "مباشر",
-    bitrate: "عالية"
-  },
-  {
-    name: "الوان 6",
-    logo: "https://via.placeholder.com/150/FF9FF3/FFFFFF?text=الوان",
-    group: "الوان الرياضية بدقة 4K",
-    category: "رياضي",
-    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409809.m3u8",
-    quality: "4K",
     status: "مباشر",
     bitrate: "عالية"
   },
