Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ body::before {
 
 <script>
 const channelsData = [
-  // القنوات الأصلية - beIN SPORTS
+  // القنوات الأصلية
   {
     name: "بين سبورت 1",
     logo: "https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Bein_Sports_logo.svg/1200px-Bein_Sports_logo.svg.png",
@@ -491,6 +491,68 @@ const channelsData = [
     category: "رياضي",
     url: "http://stream.mytvplus.net:7006/sport/ch5/ch5_1080.m3u8",
     quality: "1080p",
+    status: "مباشر",
+    bitrate: "عالية"
+  },
+  
+  // قسم الوان الرياضية بدقة 4K
+  {
+    name: "الوان 1",
+    logo: "https://via.placeholder.com/150/FF6B6B/FFFFFF?text=الوان",
+    group: "الوان الرياضية بدقة 4K",
+    category: "رياضي",
+    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409794.m3u8",
+    quality: "4K",
+    status: "مباشر",
+    bitrate: "عالية"
+  },
+  {
+    name: "الوان 2",
+    logo: "https://via.placeholder.com/150/4ECDC4/FFFFFF?text=الوان",
+    group: "الوان الرياضية بدقة 4K",
+    category: "رياضي",
+    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409797.m3u8",
+    quality: "4K",
+    status: "مباشر",
+    bitrate: "عالية"
+  },
+  {
+    name: "الوان 3",
+    logo: "https://via.placeholder.com/150/45B7D1/FFFFFF?text=الوان",
+    group: "الوان الرياضية بدقة 4K",
+    category: "رياضي",
+    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409800.m3u8",
+    quality: "4K",
+    status: "مباشر",
+    bitrate: "عالية"
+  },
+  {
+    name: "الوان 4",
+    logo: "https://via.placeholder.com/150/96CEB4/FFFFFF?text=الوان",
+    group: "الوان الرياضية بدقة 4K",
+    category: "رياضي",
+    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409803.m3u8",
+    quality: "4K",
+    status: "مباشر",
+    bitrate: "عالية"
+  },
+  {
+    name: "الوان 5",
+    logo: "https://via.placeholder.com/150/FECA57/FFFFFF?text=الوان",
+    group: "الوان الرياضية بدقة 4K",
+    category: "رياضي",
+    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409806.m3u8",
+    quality: "4K",
+    status: "مباشر",
+    bitrate: "عالية"
+  },
+  {
+    name: "الوان 6",
+    logo: "https://via.placeholder.com/150/FF9FF3/FFFFFF?text=الوان",
+    group: "الوان الرياضية بدقة 4K",
+    category: "رياضي",
+    url: "http://199.115.193.116:80/live/90040798278941/90040798278941/409809.m3u8",
+    quality: "4K",
     status: "مباشر",
     bitrate: "عالية"
   },
